--- a/src/main/resources/fxml/game.fxml
+++ b/src/main/resources/fxml/game.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -8,9 +9,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GameController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GameController">
    <children>
-      <GridPane fx:id="gameGrid" gridLinesVisible="true" layoutX="245.0" layoutY="76.0" prefHeight="510.0" prefWidth="510.0">
+      <GridPane fx:id="gameGrid" gridLinesVisible="true" layoutX="246.0" layoutY="62.0" prefHeight="510.0" prefWidth="510.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,5 +39,15 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <Button layoutX="795.0" layoutY="495.0" mnemonicParsing="false" onAction="#restart" prefHeight="77.0" prefWidth="170.0" text="New game">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+      <Button layoutX="40.0" layoutY="495.0" mnemonicParsing="false" onAction="#goBack" prefHeight="77.0" prefWidth="170.0" text="Menü">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
